Fix overflow and a few minor style tweaks

--- a/src/parser/core/modules/TimelineNeue/components/Component.module.css
+++ b/src/parser/core/modules/TimelineNeue/components/Component.module.css
@@ -14,6 +14,7 @@
 
 	margin: -1px;
 	border: 1px dotted green;
+	pointer-events: none;
 }
 
 .clickable {
@@ -34,20 +35,32 @@
 
 .labelContent {
 	position: absolute;
+	top: 50%;
+	padding: 2px 5px;
 	transform-origin: top left;
+	transform: translateY(-50%);
 }
 
 .labelContent.collapsed {
-	transform: rotate(-90deg) translateX(-100%);
+	transform: rotate(-90deg) translateX(-50%);
 	overflow: hidden;
 	text-overflow: ellipsis;
 	/* TODO: Maybe nowrap on text? */
+}
+
+.itemContainer {
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	overflow: hidden;
 }
 
 .item {
 	position: absolute;
 	top: 0;
 	height: 100%;
+	white-space: nowrap;
+	pointer-events: all;
 }
 
 .gridLine {
